# igpsport_tool

./: README.md  igpsport_cli.py  igpsport_client.py  igpsport_credentials.py  igpsport_mcp.py  igpsport_models.py  pyproject.toml
docs/superpowers/specs/: 2026-06-30-igpsport-mcp-server-design.md
examples/: claude_desktop_config.json
tests/: test_workout_mapping.py
