[project]
name = "igpsport-tool"
version = "0.1.0"
description = "Standalone tool + MCP server to create custom cycling workouts on iGPSPORT, without intervals.icu"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "requests>=2.31",
    "keyring>=24.0",
    "pydantic>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
